--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,6 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
+#font pango:SF Pro Bold 8.5 
 font pango:JetBrains Mono Bold 8.5 
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
@@ -151,7 +152,8 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+# bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "i3-msg exit"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -213,7 +215,7 @@ exec setxkbmap de
 
 exec dropbox
 
-exec picom &
+#exec picom &
 
 exec autotiling
 
