other accent colors

--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -43,7 +43,7 @@ LABEL=
 #DECIMALS=2
 COLOR_NORMAL=#CCCCCC
 COLOR_WARN=#CCCCCC
-COLOR_CRIT=#FF0000
+COLOR_CRIT=#BF616A
 
 [memory]
 command=$SCRIPT_DIR/memory
