--- a/.config/i3/config
+++ b/.config/i3/config
@@ -55,6 +55,7 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 #bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
+# bindcode 133 --release exec "rofi -modi drun,run -show drun"
 bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
@@ -189,9 +190,18 @@ bindsym $mod+r mode "resize"
 
 set $bg 	#2E3440
 set $lightbg	#4C566A
-set $focus	#82996e
+set $focus	#5E81AC
 set $text	#E5E9F0
 set $error	#BF616A	
+
+# class                 border  backgr. text    indicator 	child_border
+client.focused          $focus  $focus	$text	$focus		$focus 
+client.focused_inactive $bg		$bg		$text	$bg			$bg 
+client.unfocused        $bg		$bg		$text	$bg			$bg 
+client.urgent           $error 	$error	$text	$error		$error 
+client.placeholder      $bg     $bg		$text	$bg			$bg 
+
+client.background       $text
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -217,13 +227,13 @@ exec dropbox
 
 #exec picom &
 
-exec autotiling
+exec_always autotiling &
 
 exec xrandr --Virtual1 --mode=1920x1080
 
 exec_always feh --bg-fill /home/sam/Pictures/wave-dark-nord-blur.png
 
-for_window [class="^.*"] border pixel 0
+for_window [class="^.*"] border pixel 3
 
 gaps inner 15
 
@@ -233,5 +243,4 @@ bindsym $mod+b exec brave
 
 bindsym $mod+q kill
 
-bindsym $mod+p exec flameshot gui
 bindsym Print exec flameshot gui
