--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -35,7 +35,8 @@ signal=1
 
 [cpu_usage]
 command=$SCRIPT_DIR/cpu_usage
-interval=10
+interval=2
+#interval=10
 LABEL= 
 #min_width=CPU: 100.00%
 #T_WARN=50
