--- a/.config/i3/config
+++ b/.config/i3/config
@@ -55,8 +55,8 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 #bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-# bindcode 133 --release exec "rofi -modi drun,run -show drun"
-bindcode $mod+40 exec "rofi -modi drun,run -show drun"
+bindcode 133 --release exec "rofi -modi drun,run -show drun"
+# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
@@ -225,15 +225,13 @@ exec setxkbmap de
 
 exec dropbox
 
-# exec picom &
-
 exec_always autotiling &
 
 # exec xrandr --Virtual1 --mode=1920x1080
 
 exec parcellite
 
-exec_always feh --bg-fill /home/sam/Pictures/wave-dark-nord-blur.png
+exec_always feh --bg-fill /home/sam/Dropbox/Documents/wallpaper-blur.jpg 
 
 for_window [class="^.*"] border pixel 3
 
@@ -248,7 +246,5 @@ bindsym $mod+q kill
 bindsym $mod+g exec gitkraken
 
 bindsym Print exec flameshot gui
-
-bindsym $mod+Shift+minus move scratchpad
 
 bindsym $mod+minus scratchpad show
