--- a/.config/i3/config
+++ b/.config/i3/config
@@ -124,6 +124,19 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
+#assign workspaces to monitors
+workspace $ws1 output HDMI-0
+workspace $ws3 output HDMI-0
+workspace $ws5 output HDMI-0
+workspace $ws7 output HDMI-0
+workspace $ws9 output HDMI-0
+
+workspace $ws2 output DVI-I-0
+workspace $ws4 output DVI-I-0
+workspace $ws6 output DVI-I-0
+workspace $ws8 output DVI-I-0
+workspace $ws10 output DVI-I-0
+
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
@@ -240,6 +253,8 @@ gaps inner 15
 bindsym $mod+f exec nemo
 
 bindsym $mod+b exec brave
+
+# bindsym $mod+s exec spotify
 
 bindsym $mod+q kill
 
