--- a/.config/i3/config
+++ b/.config/i3/config
@@ -55,7 +55,7 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 #bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-bindcode 133 --release exec "rofi -modi drun,run -show drun"
+bindcode 133 --release exec "rofi -modi drun,emoji -show drun"
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
@@ -231,7 +231,8 @@ bar {
 	    urgent_workspace  	$error		$error		$text
 	}
 	position top
-        status_command SCRIPT_DIR=/home/sam/.config/i3blocks/scripts i3blocks 
+    #status_command SCRIPT_DIR=/home/sam/.config/i3blocks/scripts i3blocks 
+    status_command i3status
 }
 
 exec setxkbmap de
@@ -250,7 +251,7 @@ for_window [class="^.*"] border pixel 3
 
 gaps inner 15
 
-bindsym $mod+f exec nemo
+bindsym $mod+f exec nautilus
 
 bindsym $mod+b exec brave
 
@@ -262,4 +263,7 @@ bindsym $mod+g exec gitkraken
 
 bindsym Print exec flameshot gui
 
+bindsym Shift+Print exec flameshot full -p ~/Pictures/screen
+
 bindsym $mod+minus scratchpad show
+
