--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -194,9 +194,10 @@ font:
 # References:
 #   https://github.com/alacritty/alacritty
 
+
 colors:
   primary:
-    background: '#2e3440'
+    background: '#434C5E'
     foreground: '#d8dee9'
     dim_foreground: '#a5abb6'
   cursor:
@@ -242,7 +243,6 @@ colors:
     magenta: '#8c738c'
     cyan: '#6d96a5'
     white: '#aeb3bb'
-
 # Colors (Tomorrow Night)
 #colors:
   # Default colors
