--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,8 +13,9 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-#font pango:SF Pro Bold 8.5 
-font pango:JetBrains Mono Bold 8.5 
+
+font pango:Fira Code Bold 8.5 
+#font pango:JetBrains Mono Bold 8.5 
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -42,6 +43,12 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle &&  pkill -RTMIN+1 i3blocks 
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 exec "pkill -RTMIN+1 i3blocks"
+
+# Use playerctl to control stop and play and so on
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioPause exec playerctl play-pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -239,9 +246,13 @@ exec setxkbmap de
 
 exec dropbox
 
+exec nm-applet
+
 exec_always autotiling &
 
 # exec xrandr --Virtual1 --mode=1920x1080
+
+exec nvidia-settings --assign CurrentMetaMode="DPY-0: nvidia-auto-select @1920x1080 +1920+0 {ForceCompo    sitionPipeline=On}, DPY-2: nvidia-auto-select @1920x1080 +0+0 {ForceCompositionPipeline=On}" &
 
 exec parcellite
 
@@ -249,13 +260,18 @@ exec_always feh --bg-fill /home/sam/Dropbox/Documents/wallpaper-blur.jpg
 
 for_window [class="^.*"] border pixel 3
 
-gaps inner 15
+for_window [class="Gnome-calculator"] floating enable
+
+gaps inner 10
+#gaps inner 15
 
 bindsym $mod+f exec nautilus
 
 bindsym $mod+b exec brave
 
 # bindsym $mod+s exec spotify
+
+bindsym $mod+c exec gnome-calculator
 
 bindsym $mod+q kill
 
