--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -1,5 +1,5 @@
 general {
-        interval = 1
+        interval = 2
         output_format = "none"
 		separator = "     "
 }
@@ -14,13 +14,12 @@ cpu_usage {
 }
 
 tztime berlin {
-        #format = "%H:%M:%S  %Y-%m-%d  "
-        format = "%d. %b %H:%M   "
+        format = "%-d. %b %H:%M   "
         timezone = "Europe/Berlin"
 }
 
 volume master {
-        format = " %volume"
+        format = "墳 %volume"
         format_muted = " (%volume)"
         device = "default"
         mixer = "Master"
