--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -14,14 +14,14 @@
 # Any items in the `env` entry below will be added as
 # environment variables. Some entries may override variables
 # set by alacritty itself.
-#env:
+env:
   # TERM variable
   #
   # This value is used to set the `$TERM` environment variable for
   # each instance of Alacritty. If it is not present, alacritty will
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
-  #TERM: alacritty
+  TERM: xterm-256color
 
 window:
   # Window dimensions (changes require restart)
@@ -67,8 +67,8 @@ window:
   #
   # Window opacity as a floating point number from `0.0` to `1.0`.
   # The value `0.0` is completely transparent and `1.0` is opaque.
-  opacity: 0.5
-  background_opacity: 0.5
+  # opacity: 0.5
+  # background_opacity: 0.5
 
   # Startup Mode (changes require restart)
   #
@@ -197,7 +197,7 @@ font:
 
 colors:
   primary:
-    background: '#434C5E'
+    background: '#2e3440'
     foreground: '#d8dee9'
     dim_foreground: '#a5abb6'
   cursor:
