--- a/.config/i3/config
+++ b/.config/i3/config
@@ -14,8 +14,9 @@ set $mod Mod4
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 
-font pango:Fira Code Bold 8.5 
-#font pango:JetBrains Mono Bold 8.5 
+#font pango:SF Pro Display Bold 8.5
+#font pango:Fira Code Bold 8.5 
+font pango:JetBrains Mono Bold 8.5 
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -238,48 +239,34 @@ bar {
 	    urgent_workspace  	$error		$error		$text
 	}
 	position top
-    #status_command SCRIPT_DIR=/home/sam/.config/i3blocks/scripts i3blocks 
     status_command i3status
 }
 
+
+# STARTUP APPLICATIONS
 exec setxkbmap de
-
+exec twmnd #notifications
+exec blueman-applet
 exec dropbox
-
 exec nm-applet
-
+exec clipit
+exec redshift-gtk -l 48.783333:9.183333
+exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec_always autotiling &
-
-# exec xrandr --Virtual1 --mode=1920x1080
-
+exec_always feh --bg-fill /home/sam/Dropbox/Documents/wallpaper-mac.png
 exec nvidia-settings --assign CurrentMetaMode="DPY-0: nvidia-auto-select @1920x1080 +1920+0 {ForceCompo    sitionPipeline=On}, DPY-2: nvidia-auto-select @1920x1080 +0+0 {ForceCompositionPipeline=On}" &
 
-exec parcellite
 
-exec_always feh --bg-fill /home/sam/Dropbox/Documents/wallpaper-blur.jpg 
-
-for_window [class="^.*"] border pixel 3
-
+# WINDOW CONTROLS
+for_window [class="^.*"] border pixel 2
 for_window [class="Gnome-calculator"] floating enable
-
+smart_gaps on
 gaps inner 10
-#gaps inner 15
 
-bindsym $mod+f exec nautilus
-
+# CUSTOM SHORTCUTS
+bindsym $mod+f exec dolphin
 bindsym $mod+b exec brave
-
-# bindsym $mod+s exec spotify
-
 bindsym $mod+c exec gnome-calculator
-
 bindsym $mod+q kill
-
-bindsym $mod+g exec gitkraken
-
 bindsym Print exec flameshot gui
-
-bindsym Shift+Print exec flameshot full -p ~/Pictures/screen
-
-bindsym $mod+minus scratchpad show
 
